Bug 127843 - keyboard shortcut configuration is not preserved
Summary: keyboard shortcut configuration is not preserved
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Applications
Component: Chat Window (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-05-22 20:57 UTC by Michael Reiher
Modified: 2006-06-07 21:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Reiher 2006-05-22 20:57:31 UTC
Version:            (using KDE KDE 3.5.2)
Installed from:    Compiled From Sources

I configured Kopete not to send messages when pressing Return (I prefer Alt-S, from my licq days :). So I set the Send shortcut to "None". This basically works. However on next start of Kopete this setting is lost, it's always Return again.
Comment 1 Matt Rogers 2006-05-23 02:13:09 UTC
are you making this change to the shortcuts from the chat window? If not, then it's not surprising to me that they don't stick.
Comment 2 Michael Reiher 2006-05-23 10:00:57 UTC
Yes, from the chat window. There is the "Send" shortcut which defaults to 
"Return". ... Well, as I just notice, infact "Custom" is always set, in the 
selection at the bottom of the window, with key "Return". "Default" is 
somehow greyed out. However below it says "Default key: None". Doesn't seem 
right to me? Hitting the "Defaults" button, sets it to "None", accordingly. 
It's still forgotton on next start however...
Comment 3 Olivier Goffart 2006-06-07 21:55:02 UTC
SVN commit 549216 by ogoffart:

Fix Bug 127843: keyboard shortcut configuration is not preserved

BUG: 127843



 M  +2 -4      kopetechatwindow.cpp  


--- branches/kopete/0.12/kopete/kopete/chatwindow/kopetechatwindow.cpp #549215:549216
@@ -1,7 +1,7 @@
 /*
     kopetechatwindow.cpp - Chat Window
 
-    Copyright (c) 2002-2005 by Olivier Goffart       <ogoffart@ kde.org>
+    Copyright (c) 2002-2006 by Olivier Goffart       <ogoffart@ kde.org>
     Copyright (c) 2003-2004 by Richard Smith         <kde@metafoo.co.uk>
     Copyright (C) 2002      by James Grant
     Copyright (c) 2002      by Stefan Gehn           <metz AT gehn.net>
@@ -311,10 +311,8 @@
 
 	createStandardStatusBarAction();
 
-	chatSend = new KAction( i18n( "&Send Message" ), QString::fromLatin1( "mail_send" ), 0,
+	chatSend = new KAction( i18n( "&Send Message" ), QString::fromLatin1( "mail_send" ), QKeySequence(Key_Return) ,
 		this, SLOT( slotSendMessage() ), coll, "chat_send" );
-	//Default to 'Return' for sending messages
-	chatSend->setShortcut( QKeySequence(Key_Return) );
 	chatSend->setEnabled( false );
 
  	KStdAction::save ( this, SLOT(slotChatSave()), coll );