Fix Bug 127843: keyboard shortcut configuration is not preserved

BUG: 127843


svn path=/branches/kopete/0.12/kopete/; revision=549216